# cloud-worker

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
worker/: app.py  config.py  entrypoint.sh  gcp_storage.py  pyproject.toml  tasks.py
worker/utils/: compress.py  gcp_storage.py
